@@ -4374,6 +4374,8 @@ test(1285.2, unique(dt), dt)
 
 ##########################
 
+# TO DO: Add test for fixed bug #5519 - dcast.data.table returned error when a package imported data.table, but dint happen when "depends" on data.table. This is fixed (commit 1263 v1.9.3), but not sure how to add test.
+
 # TO DO: test and highlight in docs that negatives are fine and fast in forderv (ref R wish #15644)
 # TO DO: tests of freading classes like Date and the verbose messages there.
 # TO DO: Test mid read bump of logical T/F to character, collapse back to T and F.
